# R21-Labs

./: .gitignore  .graphifyignore  AGENTS.md  README.md  opencode.json
.opencode/: opencode.json
.opencode/agents/: lvfi-builder.md  lvfi-recovery.md  lvfi-release-auditor.md  lvfi-reviewer.md  lvfi-routine-builder.md
.opencode/commands/: lvfi-baseline.md  lvfi-diff-review.md  lvfi-gates.md  lvfi-graph-refresh.md  lvfi-recover.md  lvfi-release-check.md  lvfi-report.md  lvfi-status.md
.opencode/skills/graphify/: SKILL.md
.opencode/skills/lvfi-git-safety/: SKILL.md
.opencode/skills/lvfi-graph-navigation/: SKILL.md
.opencode/skills/lvfi-method-one/: SKILL.md
.opencode/skills/lvfi-pricing-engine/: SKILL.md
.opencode/skills/lvfi-release-gates/: SKILL.md
.opencode/skills/lvfi-task-report/: SKILL.md
.opencode/skills/r21-company-context/: SKILL.md
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260724_01_backend_foundation.py
apps/api/src/lvfi_api/: __init__.py  config.py  main.py
apps/api/src/lvfi_api/domain/: __init__.py  errors.py
apps/api/src/lvfi_api/infrastructure/: __init__.py  database.py  observability.py  pricing_engine.py
apps/api/src/lvfi_api/persistence/: __init__.py  metadata.py
apps/api/src/lvfi_api/presentation/: __init__.py  errors.py  middleware.py  routes.py
apps/api/tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_migrations.py  test_observability.py  test_persistence_metadata.py  test_pricing_engine_boundary.py  test_routes.py
docs/company/: company-context.md
docs/development-framework/: README.md  ai-collaboration.md  codex-audit-matrix.md  git-github.md  opencode-execution-workflow.md  opencode-qualification-report.md  quality.md  workflow.md
(+49 files in other folders)
